# gptcli

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: chat-with-chatgpt.yml  ci.yml  upload.yml
gpt_cli/: chat_cli.py
src/gpt_cli/: chat_cli.py
src/gptcli/: __init__.py  __version__.py  chat.py  gpt_args.py  image.py
tests/: test_chat.py  test_image.py
