[metadata]
name = gptcli
version = 1.0.0
description = This interacts with Openai GPT with a cli interface
author = pafable
license: MIT
platforms = any

[options]
platforms = any
python_requires = >=3.7
packages = find_namespace:
packages_dir =
    = src
install_requires =
    openai >= 0.27.2

[options.entry_points]
console_scripts =
    gpt-chat = gpt_cli.chat_cli:main

[options.packages.find]
where = src
exclude =
    tests*