[metadata]
name = gptcli
version = 1.0.1
description = This interacts with Openai GPT with a cli interface
long_description = file: README.md
long_description_content_type = text/markdown
author = pafable
license: MIT
platforms = any
requires-dist =
    openai >= 0.27.2

[options]
platforms = any
python_requires = >=3.9
packages = find_namespace:
packages_dir =
    = src
install_requires =
    openai >= 0.27.2

[options.entry_points]
console_scripts =
    gpt-chat = gptcli.chat_cli:main

[options.extras_require]
test =
    twine >= 4.0.2

[options.packages.find]
where = src
exclude =
    tests*